<resources>
    <string name="app_name">Trabalho Voluntario</string>
    <string name="inp_email">Email</string>
    <string name="inp_password">Senha</string>
    <string name="inp_name">Nome</string>
    <string name="btn_regiter">Cadastrar</string>
    <string name="btn_save">Salvar</string>
    <string name="btn_edit">Editar</string>
    <string name="btn_login">Login</string>
    <string name="txtLoading">Comunicando com o Servidor</string>
    <string name="placeholder_name">Digite aqui o seu nome</string>
    <string name="placeholder_email">Digite aqui o seu email</string>
    <string name="placeholder_pass1">Digite aqui a sua senha</string>
    <string name="placeholder_pass2">Digite aqui novamente a sua senha</string>
    <string name="nav_home">Trabalhos</string>
    <string name="nav_profile">Perfil</string>
    <string name="nav_post">Meus Trabalhos</string>
    <string name="nav_canditate">Candidaturas</string>
    <string name="register_save">Cadastro salvo com sucesso</string>
    <string name="personal_data">Dados Pessoal</string>
    <string name="profile_item2">Configuração</string>
    <string name="profile_item1">Dados Pessoais</string>
    <string name="profile_item3">Sair</string>
    <string name="profile_item4">Sobre</string>
    <string name="search_date">Buscando Dados ...</string>
    <string name="menu">Menu</string>
    <string name="date_empry">Nenhum Registro encontrado</string>
    <string name="inp_title">Titulo</string>
    <string name="inp_descript">Descrição</string>
    <string name="inp_address">Local</string>
    <string name="inp_date">Data do evento</string>
    <string name="inp_time">Hora do evento</string>
    <string name="place_descript">Digite aqui a descrição </string>
    <string name="place_address">Digite aqui o endereço</string>
    <string name="place_date">Digite aqui a data</string>
    <string name="place_time">Digite aqui a horas</string>
    <string name="save_ok">Salvo com sucesso</string>
    <string name="address">Local</string>
    <string name="date">Data</string>
    <string name="date_empty">Data não informada</string>
    <string name="erro_title">Erro no titulo do evento</string>
    <string name="erro_descript">Erro na descrição do evento</string>
    <string name="erro_email">Email invalido</string>
    <string name="erro_name">Nome invalido</string>
    <string name="erro_pass">Senha%d muito curta</string>
    <string name="erro_pass_invalid">Senhas são diferentes</string>
</resources>