<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layoutLoading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:visibility="gone"
            android:orientation="horizontal">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:text="@string/txtLoading" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:id="@+id/layoutInput"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:drawableStart="@mipmap/ic_user"
                android:background="@drawable/input_border"
                android:ems="10"
                android:hint="@string/placeholder_name"
                android:inputType="text" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:drawableStart="@mipmap/ic_mail"
                android:background="@drawable/input_border"
                android:ems="10"
                android:hint="@string/placeholder_email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/etPassword1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/input_border"
                android:textColor="@color/black"
                android:drawableStart="@mipmap/ic_password"
                android:ems="10"
                android:hint="@string/placeholder_pass1"
                android:inputType="textVisiblePassword" />

            <EditText
                android:id="@+id/etPassword2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:hint="@string/placeholder_pass2"
                android:background="@drawable/input_border"
                android:textColor="@color/black"
                android:drawableStart="@mipmap/ic_password"
                android:ems="10"
                android:inputType="textVisiblePassword" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="register"
                android:text="@string/btn_regiter" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="login"
                android:text="@string/btn_login" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>